force-app/main/default/objects/ProfitLossSimulation__c/ProfitLossSimulation__c.object-meta.xml
<CustomObject>
    <label>ProfitLoss Simulation</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>ProfitLoss Simulation  No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ProfitLoss Simulation</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>