force-app/main/default/objects/ProfitLossSimulation__c/fields/COMPANY_CODE__c.field-meta.xml
<CustomField>
    <fullName>COMPANY_CODE__c</fullName>
    <label>COMPANY_CODE</label>
    <length>4</length>
    <type>Text</type>
</CustomField>