force-app/main/default/objects/ProfitLossSimulation__c/fields/CONTRACT_05__c.field-meta.xml
<CustomField>
    <fullName>CONTRACT_05__c</fullName>
    <label>CONTRACT_05</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>