force-app/main/default/objects/ProfitLossSimulation__c/fields/OPPORTUNITY_ID__c.field-meta.xml
<CustomField>
    <fullName>OPPORTUNITY_ID__c</fullName>
    <label>OPPORTUNITY_ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>