force-app/main/default/objects/ProfitLossSimulation__c/fields/OPPORTUNITY_NAME__c.field-meta.xml
<CustomField>
    <fullName>OPPORTUNITY_NAME__c</fullName>
    <label>OPPORTUNITY_NAME</label>
    <length>100</length>
    <type>Text</type>
</CustomField>