force-app/main/default/objects/ProfitLossSimulation__c/fields/OPROFIT_01__c.field-meta.xml
<CustomField>
    <fullName>OPROFIT_01__c</fullName>
    <label>OPROFIT_01</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>