force-app/main/default/objects/ProfitLossSimulation__c/fields/OPROFIT_02__c.field-meta.xml
<CustomField>
    <fullName>OPROFIT_02__c</fullName>
    <label>OPROFIT_02</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>