force-app/main/default/objects/ProfitLossSimulation__c/fields/OPROFIT_03__c.field-meta.xml
<CustomField>
    <fullName>OPROFIT_03__c</fullName>
    <label>OPROFIT_03</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>