force-app/main/default/objects/ProfitLossSimulation__c/fields/PARENT__c.field-meta.xml
<CustomField>
    <fullName>PARENT__c</fullName>
    <label>PARENT</label>
    <referenceTo>ProfitLossSimulationHeader__c</referenceTo>
    <relationshipLabel>ProfitLoss Simulations</relationshipLabel>
    <relationshipName>ProfitLossSimulations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>