force-app/main/default/objects/ProfitLossSimulation__c/fields/REVENUE_01__c.field-meta.xml
<CustomField>
    <fullName>REVENUE_01__c</fullName>
    <label>REVENUE_01</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>