force-app/main/default/objects/ProfitLossSimulation__c/fields/REVENUE_04__c.field-meta.xml
<CustomField>
    <fullName>REVENUE_04__c</fullName>
    <label>REVENUE_04</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>