force-app/main/default/objects/ProfitLossSimulation__c/fields/REVENUE_05__c.field-meta.xml
<CustomField>
    <fullName>REVENUE_05__c</fullName>
    <label>REVENUE_05</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>