force-app/main/default/objects/ProfitLossSimulation__c/fields/SALES_DEPT5__c.field-meta.xml
<CustomField>
    <fullName>SALES_DEPT5__c</fullName>
    <label>SALES_DEPT5</label>
    <length>20</length>
    <type>Text</type>
</CustomField>