force-app/main/default/objects/ProfitLossSimulation__c/fields/SALES_DEPTNAME1__c.field-meta.xml
<CustomField>
    <fullName>SALES_DEPTNAME1__c</fullName>
    <label>SALES_DEPTNAME1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>