force-app/main/default/objects/ProfitLossSimulation__c/fields/SALES_DEPTNAME3__c.field-meta.xml
<CustomField>
    <fullName>SALES_DEPTNAME3__c</fullName>
    <label>SALES_DEPTNAME3</label>
    <length>100</length>
    <type>Text</type>
</CustomField>