force-app/main/default/objects/ProfitLossSimulation__c/fields/SALES_DEPTNAME5__c.field-meta.xml
<CustomField>
    <fullName>SALES_DEPTNAME5__c</fullName>
    <label>SALES_DEPTNAME5</label>
    <length>100</length>
    <type>Text</type>
</CustomField>