force-app/main/default/objects/ProfitLossSimulation__c/fields/SIMUL_VERSION__c.field-meta.xml
<CustomField>
    <fullName>SIMUL_VERSION__c</fullName>
    <label>SIMUL_VERSION</label>
    <length>10</length>
    <type>Text</type>
</CustomField>