force-app/main/default/objects/ProfitLossSimulation__c/fields/SUM_CONTRACT__c.field-meta.xml
<CustomField>
    <fullName>SUM_CONTRACT__c</fullName>
    <formula>CONTRACT_01__c + CONTRACT_02__c + CONTRACT_03__c + CONTRACT_04__c + CONTRACT_05__c + CONTRACT_06__c + CONTRACT_07__c + CONTRACT_08__c + CONTRACT_09__c + CONTRACT_10__c + CONTRACT_11__c + CONTRACT_12__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SUM_CONTRACT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>