force-app/main/default/objects/ProfitLossSimulation__c/fields/SUM_PROFIT__c.field-meta.xml
<CustomField>
    <fullName>SUM_PROFIT__c</fullName>
    <formula>OPROFIT_01__c + OPROFIT_02__c + OPROFIT_03__c + OPROFIT_04__c + OPROFIT_05__c + OPROFIT_06__c + OPROFIT_07__c + OPROFIT_08__c + OPROFIT_09__c + OPROFIT_10__c + OPROFIT_11__c + OPROFIT_12__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SUM_PROFIT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>