force-app/main/default/objects/ProfitLossSimulation__c/fields/SUM_REVENUE__c.field-meta.xml
<CustomField>
    <fullName>SUM_REVENUE__c</fullName>
    <formula>REVENUE_01__c + REVENUE_02__c + REVENUE_03__c + REVENUE_04__c + REVENUE_05__c + REVENUE_06__c + REVENUE_07__c + REVENUE_08__c + REVENUE_09__c + REVENUE_10__c + REVENUE_11__c + REVENUE_12__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SUM_REVENUE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>