force-app/main/default/objects/ProfitLossSimulation__c/fields/VERSION__c.field-meta.xml
<CustomField>
    <fullName>VERSION__c</fullName>
    <label>VERSION</label>
    <length>3</length>
    <type>Text</type>
</CustomField>